--- a/tex/main.tex
+++ b/tex/main.tex
@@ -999,7 +999,7 @@ The model includes the following main components:
 	in order to be captured by \ce{Imp$\upbeta$}.
 \item
 	\ce{CAS}
-	(a.k.a.~\ce{Exp{2}}, \ce{Xpo{2}})
+	(a.k.a.~\ce{Exp{2}}, \ce{Xpo{2}}).
 	%
 	Recycles \ce{Imp$\upalpha$} back to the cytoplasm.
 \item
@@ -1030,10 +1030,10 @@ The model includes the following main components:
 	that have transitioned to the cytoplasmic side
 	by hydrolysis
 	is compensated by an effective pump
-	as in \eqref{e:pump}.
+	as in Eqn.~\eqref{e:pump}.
 	%
 	The hydrolysis itself is described by one 
-	effective kinetic rate as in \eqref{e:hydrolysis}.
+	effective kinetic rate as in Eqn.~\eqref{e:hydrolysis}.
 \end{itemize}
 
 %
