--- a/tex/main.tex
+++ b/tex/main.tex
@@ -411,6 +411,18 @@ Few details were provided in \cite{GoerlichSeewaldRibbeck2003},
 so we formulate a version of it here explicitly.
 %
 %
+An important omission in this model is
+the reaction of 
+\ce{Imp$\upbeta$ . Ran . GTP}
+with
+\ce{{RanBP1}},
+which facilitates hydrolysis;
+on the other hand,
+the inhibition of hydrolysis 
+by \ce{Imp$\upbeta$} is absent, as well,
+cf.~the discussion in \S\ref{ss:ranbp1}.
+%
+%
 The following equations
 comprise
 the handling of cargo by {Imp$\upbeta$} in the cytoplasm,
