--- a/tex/main.tex
+++ b/tex/main.tex
@@ -309,7 +309,11 @@ is the base layer of nucleocytoplasmic transport.
 %
 We implement it as
 the ``minimal Ran gradient system'' from 
-\cite{GoerlichSeewaldRibbeck2003}.
+\cite[%
+\href{https://i.ibb.co/z2Rb3Qs/Goerlich-Seewald-Ribbeck-2003-Fig1.png}{Fig.~1},
+\href{https://i.ibb.co/R6T7KRD/Goerlich-Seewald-Ribbeck-2003-Fig2.png}{Fig.~2},
+etc.%
+]{GoerlichSeewaldRibbeck2003}.
 %
 %
 The equations are recapitulated in
