--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1064,7 +1064,7 @@ for this model
 are summarized in Fig.~\ref{f:app:3s-plot1-ss}/\ref{f:app:3s-plot2-ss}.
 %
 For details visit the URL
-\newcommand{\checkpoint}{20220312-115341}
+\newcommand{\checkpoint}{20220312-123444}
 \[
 	\label{e:checkpoint}
 	%
@@ -1404,7 +1404,6 @@ to reproduce those trends.
 
 
 \clearpage
-\thispagestyle{empty}
 
 \begin{figure}[!h]
 	\centering
@@ -1414,7 +1413,7 @@ to reproduce those trends.
 	\newcommand{\figpath}{20211018-Appli/checkpoint/\checkpoint/plot_ss}
 	\newcommand{\figures}{\fig{Free ImpA}\\\fig{Free ImpB}\\\fig{Free CAS}\\\fig{Free NLS}}
 	
-	\begin{minipage}{0.49\textwidth}
+	\begin{minipage}{0.32\textwidth}
 		\centering
 		%
 		Baseline \\[0.5\baselineskip]
@@ -1425,7 +1424,7 @@ to reproduce those trends.
 	%
 	\hfill
 	%
-	\begin{minipage}{0.49\textwidth}
+	\begin{minipage}{0.32\textwidth}
 		\centering
 		%
 		Decrease \ce{Imp$\upbeta$} \\[0.5\baselineskip]
@@ -1433,10 +1432,10 @@ to reproduce those trends.
 		\newcommand\fig[1]{\includegraphics[width=\textwidth]{\figpath/b_LowImpB/#1}}
 		\figures
 	\end{minipage}
-	
-	\vspace{\baselineskip}
-	
-	\begin{minipage}{0.49\textwidth}
+	%
+	\hfill
+	%
+	\begin{minipage}{0.32\textwidth}
 		\centering
 		%
 		Increase NPC \\[0.5\baselineskip]
@@ -1444,10 +1443,10 @@ to reproduce those trends.
 		\newcommand\fig[1]{\includegraphics[width=\textwidth]{\figpath/c_MoreNPC/#1}}
 		\figures
 	\end{minipage}
-	%
-	\hfill
-	%
-	\begin{minipage}{0.49\textwidth}
+
+	\vspace{\baselineskip}
+
+	\begin{minipage}{0.32\textwidth}
 		\centering
 		%
 		Increase \ce{Imp$\upalpha$} \\[0.5\baselineskip]
@@ -1455,10 +1454,10 @@ to reproduce those trends.
 		\newcommand\fig[1]{\includegraphics[width=\textwidth]{\figpath/d_HighImpA/#1}}
 		\figures
 	\end{minipage}
-	
-	\vspace{\baselineskip}
-	
-	\begin{minipage}{0.49\textwidth}
+	%
+	\hfill
+	%
+	\begin{minipage}{0.32\textwidth}
 		\centering
 		%
 		Decrease \ce{Imp$\upalpha$} \\[0.5\baselineskip]
@@ -1469,7 +1468,7 @@ to reproduce those trends.
 	%
 	\hfill
 	%
-	\begin{minipage}{0.49\textwidth}
+	\begin{minipage}{0.32\textwidth}
 		\centering
 		%
 		No \ce{Ran.GTP} regeneration \\[0.5\baselineskip]
@@ -1498,7 +1497,7 @@ to reproduce those trends.
 	\label{f:app:3s-plot1-ss}
 \end{figure}
 
-
+\clearpage
 
 \begin{figure}[!h]
 	\centering
@@ -1508,7 +1507,7 @@ to reproduce those trends.
 	\newcommand{\figpath}{20211018-Appli/checkpoint/\checkpoint/plot_ss}
 	\newcommand{\figures}{\fig{All ImpA}\\\fig{All ImpB}\\\fig{All CAS}\\\fig{All NLS}}
 	
-	\begin{minipage}{0.49\textwidth}
+	\begin{minipage}{0.32\textwidth}
 		\centering
 		%
 		Baseline \\[0.5\baselineskip]
@@ -1519,7 +1518,7 @@ to reproduce those trends.
 	%
 	\hfill
 	%
-	\begin{minipage}{0.49\textwidth}
+	\begin{minipage}{0.32\textwidth}
 		\centering
 		%
 		Decrease \ce{Imp$\upbeta$} \\[0.5\baselineskip]
@@ -1527,10 +1526,10 @@ to reproduce those trends.
 		\newcommand\fig[1]{\includegraphics[width=\textwidth]{\figpath/b_LowImpB/#1}}
 		\figures
 	\end{minipage}
-	
-	\vspace{\baselineskip}
-	
-	\begin{minipage}{0.49\textwidth}
+	%
+	\hfill
+	%
+	\begin{minipage}{0.32\textwidth}
 		\centering
 		%
 		Increase NPC \\[0.5\baselineskip]
@@ -1538,10 +1537,10 @@ to reproduce those trends.
 		\newcommand\fig[1]{\includegraphics[width=\textwidth]{\figpath/c_MoreNPC/#1}}
 		\figures
 	\end{minipage}
-	%
-	\hfill
-	%
-	\begin{minipage}{0.49\textwidth}
+		
+	\vspace{\baselineskip}
+		
+	\begin{minipage}{0.32\textwidth}
 		\centering
 		%
 		Increase \ce{Imp$\upalpha$} \\[0.5\baselineskip]
@@ -1549,10 +1548,10 @@ to reproduce those trends.
 		\newcommand\fig[1]{\includegraphics[width=\textwidth]{\figpath/d_HighImpA/#1}}
 		\figures
 	\end{minipage}
-	
-	\vspace{\baselineskip}
-	
-	\begin{minipage}{0.49\textwidth}
+	%
+	\hfill
+	%
+	\begin{minipage}{0.32\textwidth}
 		\centering
 		%
 		Decrease \ce{Imp$\upalpha$} \\[0.5\baselineskip]
@@ -1563,7 +1562,7 @@ to reproduce those trends.
 	%
 	\hfill
 	%
-	\begin{minipage}{0.49\textwidth}
+	\begin{minipage}{0.32\textwidth}
 		\centering
 		%
 		No \ce{Ran.GTP} regeneration \\[0.5\baselineskip]
