--- a/tex/main.tex
+++ b/tex/main.tex
@@ -150,7 +150,8 @@ maxbibnames=100,
 %
 
 \title{%
-A minimalistic computational model of NCT%
+A minimalistic computational model of \\
+nucleocytoplasmic transport%
 \thanks{%
 R.~Andreev, L.~Kapinos, and R.~Y.~H.~Lim.
 \today
@@ -175,16 +176,16 @@ R.~Andreev, L.~Kapinos, and R.~Y.~H.~Lim.
 %
 We develop a minimalistic computational
 model of 
-NCT
+nucleocytoplasmic transport
 that mimics
-the live cell and (more closely) the artificial cell.
+the live cell and (more closely) a hypothetical artificial cell.
 %
 %
 We are particularly
 interested in 
 the nuclear-to-cytoplasmic contrast
 of 
-certain molecular species,
+certain molecular species
 at steady state,
 namely,
 RanGTP,
@@ -213,8 +214,7 @@ N:C = nuclear-to-cytoplasmic.
 
 %
 
-The base layer of NCT is the establishment of 
-the RanGTP gradient
+The base layer of NCT is the RanGTP gradient
 for which we use the ``minimal Ran gradient system''
 of \cite{GoerlichSeewaldRibbeck2003};
 see \S\ref{s:GSR03:Ran}.
@@ -257,7 +257,7 @@ we develop
 a computational model
 that focuses
 on the main players of NCT,
-that is
+that is,
 {RanGTP},
 {Imp$\upbeta$} (karyopherin-beta),
 {Imp$\upalpha$} (karyopherin-alpha),
